# product-categories-4all

./: .gitignore  Makefile  Pipfile  README.md  categories_classification_cli.py  docker-compose_airflow.yaml  inspect_inference_result.ipynb  setup.cfg
.github/workflows/: workflow.yaml
categories_classification/: paths.py  predictor.py  trainer.py
conf/: clients_config.yaml
dags/: test_dag.py
dags_templates/: prediction.py  training.py
docker/: Dockerfile
mlflow/: Dockerfile
scripts/: generate_dags.py
tests/categories_classification/: conftest.py  test_predictor.py  test_trainer.py
