[metadata]
name = better_categories_4all_technical_test
version = 1.0.0
description = Better Categories 4All technical test
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = categories_classification tests
        -rA -v --color=yes --showlocals --durations=10 --doctest-modules
        --cov=categories_classification --cov-report=term

[tool:pylint]
# Run with: pylint --rcfile=setup.cfg
disable = C1801,missing-module-docstring,wrong-import-order
max-line-length = 120
good-names = i,j,k,f,df,_,X,X_out,X_list,x,y
output-format = colorized
